# atomic

mobile/: bun.lockb  flake.nix  nativescript.config.ts  package-lock.json  package.json  svelte.config.js  tsconfig.json  webpack.config.js
mobile/app/components/: Home.svelte
mobile/types/: shims.svelte.d.ts
server/: .env.example  Cargo.toml  atomic.sql  bun.lockb  package.json  tsconfig.json
server/src/: index.ts  main.rs  models.ts
server/src/lib/: context.ts  db.ts  utils.ts
server/src/models/: atom.ts  user.ts
server/src/routers/: atom.ts  hello.ts  histories.ts  index.ts  user.ts
web/: .eslintrc.yaml  bun.lockb  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: app.css  app.html
web/src/components/: Atom.svelte  Navbar.svelte
web/src/lib/: types.ts  utils.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/home/: +page.svelte
web/src/routes/signin/: +page.svelte
web/src/routes/signup/: +page.svelte
web/src/routes/table/: +page.svelte
