[package]
name = "atomic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.6.20"
axum-login = { version = "0.6.0", features = ["postgres"] }
dotenv = "0.15.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
